# TrueCheckerPyton

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt
.gitlab/: renovate.json
tests/: base_client_test.py  cancel_job_test.py  conftest.py  get_job_test.py  put_profile_test.py  test_base_client.py  test_cancel_job.py  test_get_profile.py  test_put_profile.py
tests/dataset/: .env  user_ids.txt  users.csv
truechecker/: __init__.py  api.py  base.py
truechecker/models/: profile.py  users.py
truechecker/utils/: json.py
