[tool.poetry]
name = "truechecker"
version = "2021.4.7"
description = "Python client for True Checker API"
authors = ["Oleg A. <oleg@trueweb.app>"]
maintainers = ["Oleg A. <oleg@trueweb.app>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://gitlab.com/true-web-app/true-checker/true-checker-python"
documentation = "https://checker.trueweb.app/redoc/"
keywords = [
    "True Checker",
    "Telegram",
    "Bots",
]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7"
certifi = "^2020"
pydantic = "^1.8"
ujson = [
    { version = "^4.0", platform = "linux", optional = true },
    { version = "^4.0", platform = "darwin", optional = true },
]
uvloop = [
    { version = "^0.15", platform = "linux", optional = true },
    { version = "^0.15", platform = "darwin", optional = true },
]


[tool.poetry.dev-dependencies]
black = "20.8b1"
coverage = "^5.5"
flake8 = "^3.9.0"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.11"
pydocstyle = "^6.0.0"
pylint = "^2.7.4"
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-cov = "^2.11"


[tool.poetry.extras]
ultra = ["ujson", "uvloop"]


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
