[tool.poetry]
name = "truechecker"
version = "2021.4.7"
description = "Python client for True Checker API"
authors = ["Oleg A. <oleg@trueweb.app>"]
maintainers = ["Oleg A. <oleg@trueweb.app>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://gitlab.com/true-web-app/true-checker/true-checker-python"
documentation = "https://checker.trueweb.app/redoc/"
keywords = [
    "True Checker",
    "Telegram",
    "Bots",
]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7"
certifi = "^2021"
pydantic = "^1.8"
ujson = [
    { version = "^4.0", platform = "linux", optional = true },
    { version = "^4.0", platform = "darwin", optional = true },
]
uvloop = [
    { version = "^0.15", platform = "linux", optional = true },
    { version = "^0.15", platform = "darwin", optional = true },
]


[tool.poetry.dev-dependencies]
black = "21.6b0"
coverage = "^5.5"
flake8 = "^3.9.2"
isort = "^5.9.1"
mypy = "^0.910"
pre-commit = "^2.13"
pydocstyle = "^6.1"
pylint = "^2.8"
pytest = "^6.2"
pytest-asyncio = "^0.15"
pytest-cov = "^2.12"


[tool.poetry.extras]
ultra = ["ujson", "uvloop"]


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
